<resources>
    <string name="app_name">HomeMonitoring</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_desktop">Computer</string>
    <string name="action_laptop">Laptop</string>
    <string name="action_doccam">Doc Cam</string>
    <string name="action_dvd">DVD</string>
    <string name="action_bluray">BluRay Player</string>
    <string name="action_other">Other BluRay</string>
    <string name="action_conf">Conference</string>
    <string name="action_apple">Apple TV</string>
    <string name="action_poweron">System Power ON</string>
    <string name="action_poweroff">System Power OFF</string>
    <string name="action_room">Room Select</string>
    <string name="action_lampon">Lamp ON</string>
    <string name="action_zoomin">Zoom in</string>
    <string name="action_focus">Auto Focus</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_lampoff">Lamp OFF</string>
    <string name="action_zoomout">Zoom out</string>
    <string name="action_focusin">Focus in</string>
    <string name="action_freeze">Image freeze</string>
    <string name="action_focusout">Focus out</string>
    <string name="action_stop">STOP</string>
    <string name="action_play">PLAY</string>
    <string name="action_pause">PAUSE</string>
    <string name="action_skipf">SKIP</string>
    <string name="action_skipb">SKIP</string>
    <string name="action_scanf">SCAN</string>
    <string name="action_scanb">SCAN</string>
    <string name="action_power">POWER</string>
    <string name="action_eject">EJECT</string>
    <string name="action_menu">MENU</string>
    <string name="action_videocall">Videocall\nKeypad</string>
    <string name="action_camera">Camera</string>
    <string name="action_dtmf">DTMF</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_monitor">Monitor\nControl</string>
    <string name="action_micmute">Mic Mute</string>
    <string name="action_intprotocol">IP:</string>
    <string name="action_backspace">Back Space</string>
    <string name="action_keyboard">Keyboard</string>
    <string name="action_dial">Dial</string>
    <string name="action_hangup">Hang Up</string>
    <string name="action_maincam">Main camera</string>
    <string name="action_secondcam">Second camera</string>
    <string name="action_farendcam">Far end camera</string>
    <string name="action_back">Back</string>
    <string name="action_page">Page</string>
    <string name="action_fpage">First\nPage</string>
    <string name="action_lpage">Last\nPage</string>
    <string name="action_cselected">Clear\nselected</string>
    <string name="action_acontact">Add\ncontact</string>
    <string name="action_dialselect">Dial Select</string>
    <string name="action_monitorone">Monitor 1</string>
    <string name="action_monitortwo">Monitor 2</string>
    <string name="action_monitorthree">Monitor 3</string>
    <string name="action_selfview">Self-view</string>
    <string name="action_auto">Auto</string>
    <string name="action_all">All</string>
    <string name="action_farornear">Far or Near</string>
    <string name="action_nearonly">Near only</string>
    <string name="action_faronly">Far only</string>
    <string name="action_contentonly">Content only</string>
    <string name="action_recordall">Record all</string>
    <string name="action_recordfarornear">Record far or near</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
    <string name="action_roomone">Room 1</string>
    <string name="action_roomtwo">Room 2</string>
    <string name="action_roomthree">Room 3</string>
    <string name="action_roomfour">Room 4</string>
    <string name="action_siteid">Site ID:</string>
    <string name="action_siteuser">Site user name: </string>
    <string name="action_sitepass">Site password:</string>
    <string name="action_acsurl">ACS URL:</string>
    <string name="action_locbeacon">Location beacon-</string>
    <string name="action_logout">Logout</string>
    <string name="action_roomname">Room Name</string>
    <string name="action_sversion">Software version</string>
    <string name="action_dealerid">Delear ID</string>
    <string name="action_helpdesk">Call help desk</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_get_sites">GetSites</string>
    <string name="title_activity_get_subsites">GetSubsites</string>
    <string name="title_activity_get_devices">GetDevices</string>


    <string name="command_hint">Manual commands go here…</string>
    <string name="ip_hint">hostname[:port]</string>
    <string name="port_hint">Port</string>
    <string name="send_button_text">Send</string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect_button_text">Disconnect</string>
    <string name="input_stream_welcome_text">Server Status</string>
    <string name="xbox_button_text">Xbox/PC(ANALOG)</string>
    <string name="projector_button_text">Projector</string>
    <string name="pc_button_text">PC(HDMI)</string>
    <string name="radio_button_text">Radio Paradise</string>
    <string name="stop_button_text">Stop</string>
    <string name="play_button_text">Play</string>
    <string name="volume_button_text">Adj. Vol.</string>
    <string name="title_activity_output_screen">OutputScreen</string>

</resources>
